Fixed issue for faceting and short by alignment on directory page By:- Ashish

--- a/stylesheets/layouts/l-paginatedlist.less
+++ b/stylesheets/layouts/l-paginatedlist.less
@@ -25,6 +25,7 @@
                 font-weight: 400;
                 width: 203px;
                 height: 35px;
+                margin-bottom: 0;
                 padding: 4px 8px;
             }
         }
@@ -36,10 +37,12 @@
     .mz-pagingcontrols {
         float: right;
         border-right: 1px solid #dbdbda;
+        margin-top: 5px;
         padding-right: 25px;
     } 
     .mz-pagenumbers {
         float: right;
+        margin-top: 5px;
         margin-left: 14px;
         .mz-pagenumbers-prev,
         .mz-pagenumbers-next,
