--- a/stylesheets/modules/common/page-sort.less
+++ b/stylesheets/modules/common/page-sort.less
@@ -9,3 +9,16 @@
         margin: 0 5px;
     }
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+	.mz-category {
+		.mz-l-paginatedlist {
+			.mz-l-paginatedlist-header {
+				.mz-sortby {
+				    margin-bottom: 10px;
+				    text-align: right;
+				}
+			}
+		}
+	}
+}
