--- a/stylesheets/modules/faceting-form.less
+++ b/stylesheets/modules/faceting-form.less
@@ -128,12 +128,13 @@
     .mz-facetingform-facet-hierarchy {
         .mz-facetingform-facet-hierarchy {
             li {
-                margin: 0 0 4px 0.5em;
-                line-height: 1em;
-                &::before {
-                    display: inline-block;
-                    content: "\221F";
-                    font-size: @fontSizeLarger;
+                line-height: 22px;
+                margin: 0 0 0 10px;
+                a {
+                    color: #495363;
+                    &:hover {
+                        text-decoration: underline;
+                    }
                 }
             }
         }
