--- a/stylesheets/responsive/media-query-md.less
+++ b/stylesheets/responsive/media-query-md.less
@@ -36,18 +36,6 @@
 				}
 			}
 		}
-	}  
-
-	//Directory Page
-	.mz-category {
-		.mz-l-paginatedlist {
-			.mz-l-paginatedlist-header {
-				.mz-sortby {
-				    text-align: right;
-				    margin-bottom: 10px;
-				}
-			}
-		}
 	}
 
 	//Back to top
