--- a/stylesheets/responsive/media-query-sm.less
+++ b/stylesheets/responsive/media-query-sm.less
@@ -1,5 +1,8 @@
 /**** Site Changes for small screens ****/
 @media @mz-sm-media-query{
+	.container {
+	    width: 100%;
+	}
 	#mz-home-slider{
 		.slider{
 			.mz-slide-details{ 
@@ -79,6 +82,9 @@
 				    text-align: right;
 				    margin-bottom: 10px;
 				}
+			}
+			.mz-pagingcontrols {
+			    padding-right: 12px;
 			}
 		}
 	}
