--- a/stylesheets/responsive/media-query-xs.less
+++ b/stylesheets/responsive/media-query-xs.less
@@ -344,14 +344,16 @@
 		}
 		.mz-l-paginatedlist {
 			margin-top: 0;
-			.mz-pagetitle {
-				font-size: 18px;
-				margin-top: 11px;
-				margin-bottom: 0;
-				padding-right: 15px;
-				padding-bottom: 16px;
-				padding-left: 15px;
-			}
+			h1 {
+				&.mz-pagetitle {
+					font-size: 18px;
+					margin-top: 11px;
+					margin-bottom: 0;
+					padding-right: 15px;
+					padding-bottom: 16px;
+					padding-left: 15px;
+				}
+			}			
 			.mz-l-tiles {
 				margin-top: 18px;
 			}
