--- a/stylesheets/site.less
+++ b/stylesheets/site.less
@@ -542,6 +542,17 @@ img[data-mztp]{
 }
 
 /**** Directory Page ****/
+.mz-category {
+	.mz-l-pagecontent {
+		h1 {
+			&.mz-pagetitle {
+				margin-top: 16px;
+				margin-bottom: 16px;
+				padding-bottom: 12px;
+			}
+		}
+	}
+}
 .mz-facetingform{
 	.mz-l-sidebaritem{
 		&.color, &.size{
